# ut-nfcd-p2p-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clickable.json  main.cpp  manifest.json.in  nfcp2pdemo.apparmor  nfcp2pdemo.desktop.in
plugins/: CMakeLists.txt
plugins/Example/: CMakeLists.txt  org.sailfishos.nfc.Adapter.xml  org.sailfishos.nfc.Daemon.xml  org.sailfishos.nfc.Peer.xml  plugin.cpp  plugin.h  reader.cpp  reader.h  service.cpp  service.h  servicehandler.cpp  servicehandler.h
po/: nfcp2pdemo.me.fredl.nfcp2pdemo.pot
qml/: Main.qml
